syntax = "proto3";
package messenger;
import "timestamp.proto";

option go_package = "satweave/messenger/common";

message Result {
  enum Status {
    OK = 0;
    FAIL = 1;
  }
  Status status = 1;
  int32 code = 2;
  string message = 3;
}

message Head {
  Timestamp timestamp = 1;
  uint64 term = 2;
}

message NilRequest {}

message NilResponse {
  Status status = 1;
}

message Status {
  int32 err_code = 1;
  string message = 2;
}

message MachineResource {
  int32 slot_number = 1;
}

message TaskManagerDescription {
  string endpoint = 1;
  uint64 raft_id = 2;
  MachineResource resource = 3;
  string host = 4;
  uint64 port = 5;
}

message ExecuteTask {
  string cls_name = 1;
  repeated InputEndpoints input_endpoints = 2;
  repeated OutputEndpoints output_endpoints = 3;
  repeated File resources = 4;
  File task_file = 5;
  string subtask_name = 6;
  int64 partition_idx = 7;
  // 所处节点，用 raft_id 表示
  uint64 locate = 8;
  // IP
  string host = 9;
  // 使用的worker
  uint64 worker_id = 10;
}

message InputEndpoints {
  string host = 1;
  uint64 worker_id = 2;
}

message OutputEndpoints {
  string host = 1;
  uint64 worker_id = 2;
}

// logical Task
message Task {
  string cls_name = 1;
  int64 currency = 2;
  repeated string input_tasks = 3;
  repeated File resources = 4;
  File task_file = 5;
  // 所处节点，用 raft_id 表示
  uint64 locate = 6;
  int64 slot_id = 7;
}

message File {
  string name = 1;
  string content = 2;
}

message RequiredSlotDescription {

}

message StreamData {
  repeated KeyValueData kv = 1;

  message KeyValueData {
    string key = 1;
    string value = 2;
  }
}